--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     text-align: center;
     margin-left: 2rem;
     padding: 0.5rem;
-    background-color: yellow;
+    background-color: grey;
     font-family: "Odibee Sans", cursive;
     font-weight: bold;
     font-size: 1.7rem;
@@ -58,7 +58,7 @@ body {
     position: absolute;
     width: 100vw;
     padding: 3rem;
-    background-color: yellow;
+    background-color: grey;
     text-align: center;
     margin-top: 10px;
     border-top-right-radius: 2rem;
@@ -70,7 +70,7 @@ body {
     top: 0;
     width: 100vw;
     padding: 3rem;
-    background-color: yellow;
+    background-color: grey;
     text-align: center;
     border-bottom-left-radius: 3rem;
 }
